# Sphinx

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
src/: cppClass.hpp
